--- a/src/main/resources/fxml/purchase.fxml
+++ b/src/main/resources/fxml/purchase.fxml
@@ -9,22 +9,27 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="parent" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tanveer.controllers.PurchaseController">
+<BorderPane fx:id="parent" prefHeight="617.0" prefWidth="836.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tanveer.controllers.PurchaseController">
 
     <top>
-        <MenuBar BorderPane.alignment="CENTER">
+        <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Close" />
+                  <MenuItem mnemonicParsing="false" onAction="#addSupplier" text="Add Supplier" />
+                        <MenuItem mnemonicParsing="false" onAction="#addItem" text="Add Item" />
+                  <MenuItem mnemonicParsing="false" onAction="#purchaseItem" text="Purchase an Item" />
+                  <MenuItem fx:id="closeBtn" mnemonicParsing="false" onAction="#close" text="Close" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
@@ -43,7 +48,7 @@
     <left>
       <VBox BorderPane.alignment="CENTER_LEFT">
          <children>
-             <Button mnemonicParsing="false" onAction="#getBack" prefHeight="37.0" prefWidth="125.0">
+             <Button fx:id="backBtn" mnemonicParsing="false" onAction="#getBack" prefHeight="37.0" prefWidth="125.0">
                  <graphic>
                      <ImageView fitHeight="25.0" fitWidth="36.0" focusTraversable="true">
                          <image>
@@ -70,28 +75,62 @@
         <HBox>
             <StackPane alignment="TOP_CENTER" prefHeight="400.0" prefWidth="465.0" HBox.hgrow="ALWAYS">
             <children>
-               <ToolBar prefHeight="40.0" prefWidth="524.0">
+               <ToolBar fx:id="toolbar" prefHeight="40.0" prefWidth="524.0">
                   <items>
                      <Label prefHeight="13.0" prefWidth="48.0" text="Code:" />
-                     <Label fx:id="itemsCode" prefHeight="26.0" prefWidth="88.0" text="5054" />
-                     <Label prefHeight="7.0" prefWidth="53.0" text="Name:" />
-                     <Label prefHeight="12.0" prefWidth="300.0" text="Grase" />
+                     <Label fx:id="itemCode" prefHeight="11.0" prefWidth="88.0" />
+                     <Label prefHeight="0.0" prefWidth="53.0" text="Name:" />
+                     <Label fx:id="itemName" prefHeight="3.0" prefWidth="300.0" />
+                     <Label text="Supplier" />
+                     <Label fx:id="itemSupplier" prefWidth="294.0" />
                   </items>
                </ToolBar>
-               <TableView fx:id="purchaseTable" focusTraversable="false" prefHeight="433.0" prefWidth="899.0">
+               <TableView fx:id="purchaseTable" editable="true" focusTraversable="false" prefHeight="390.0" prefWidth="899.0">
                   <StackPane.margin>
                      <Insets top="40.0" />
                   </StackPane.margin>
+                  <columnResizePolicy>
+                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                  </columnResizePolicy>
                </TableView>
+               <TitledPane fx:id="supplierSection" animated="false" collapsible="false" prefHeight="446.0" prefWidth="899.0" text="Supplier" visible="false">
+                 <content>
+                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="410.0" prefWidth="532.0">
+                        <children>
+                           <Label layoutX="149.0" layoutY="40.0" prefHeight="6.0" prefWidth="106.0" text="Name" />
+                           <Label fx:id="supplierNameLabel" layoutX="283.0" layoutY="40.0" prefHeight="14.0" prefWidth="135.0" text="Label" />
+                           <Label layoutX="149.0" layoutY="101.0" text="Address" />
+                           <Label fx:id="supplierAddressLabel" layoutX="283.0" layoutY="101.0" prefHeight="16.0" prefWidth="505.0" text="Label" />
+                           <Label layoutX="149.0" layoutY="166.0" text="Items" />
+                           <VBox layoutX="268.0" layoutY="166.0" prefHeight="216.0" prefWidth="104.0">
+                              <children>
+                                 <ListView fx:id="supplierItemsList" prefHeight="241.0" prefWidth="104.0" />
+                              </children>
+                           </VBox>
+                        </children>
+                     </AnchorPane>
+                 </content>
+               </TitledPane>
             </children></StackPane>
 
         </HBox>
     </center>
    <bottom>
-      <HBox prefHeight="102.0" prefWidth="524.0" BorderPane.alignment="BOTTOM_CENTER">
-         <BorderPane.margin>
-            <Insets left="500.0" />
-         </BorderPane.margin></HBox>
+      <TitledPane fx:id="statsSection" collapsible="false" prefHeight="151.0" prefWidth="237.0" text="Stats" BorderPane.alignment="CENTER">
+         <content>
+            <AnchorPane prefHeight="116.0" prefWidth="834.0">
+               <children>
+                  <Label fx:id="itemTotalPaidLabel" layoutX="119.0" layoutY="7.0" prefHeight="16.0" prefWidth="262.0" text="null" />
+                  <Label fx:id="itemTotalPaidFigure" layoutX="413.0" layoutY="7.0" prefHeight="16.0" prefWidth="137.0" text="null" />
+                  <Label fx:id="itemTotalRemLabel" layoutX="119.0" layoutY="30.0" prefHeight="16.0" prefWidth="371.0" text="null" />
+                  <Label fx:id="itemTotalRemFigure" layoutX="413.0" layoutY="30.0" prefHeight="16.0" prefWidth="113.0" text="null" />
+                  <Label layoutX="119.0" layoutY="54.0" prefHeight="16.0" prefWidth="121.0" text="Grand Total Paid" />
+                  <Label fx:id="grandTotalPaid" layoutX="413.0" layoutY="54.0" prefHeight="16.0" prefWidth="95.0" text="null" />
+                  <Label layoutX="119.0" layoutY="76.0" text="Grand Total remaining" />
+                  <Label fx:id="grandTotalRem" layoutX="413.0" layoutY="76.0" prefHeight="16.0" prefWidth="95.0" text="null" />
+               </children>
+            </AnchorPane>
+         </content></TitledPane>
    </bottom>
     
 
