--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -32,7 +32,7 @@
                     </ImageView>
                 </graphic>
             </Button>
-            <Button fx:id="expansesBtn" stylesheets="@style.css">
+            <Button fx:id="expansesBtn" onAction="#showExpansesStage" stylesheets="@style.css">
                 <graphic>
                     <ImageView fitHeight="150.0" fitWidth="150.0">
                         <image>
