--- a/src/main/resources/fxml/expanses.fxml
+++ b/src/main/resources/fxml/expanses.fxml
@@ -1,35 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tanveer.controllers.ExpansesController">
-   <children>
-      <MenuBar layoutX="-1.0" prefHeight="29.0" prefWidth="600.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <ToggleButton layoutX="73.0" layoutY="29.0" mnemonicParsing="false" text="ToggleButton" />
-      <ToggleButton layoutX="225.0" layoutY="29.0" mnemonicParsing="false" text="ToggleButton" />
-      <ToggleButton layoutX="389.0" layoutY="29.0" mnemonicParsing="false" text="ToggleButton" />
-   </children>
-</AnchorPane>
+<BorderPane xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tanveer.controllers.ExpensesController">
+   <top>
+      <AnchorPane fx:id="parent" BorderPane.alignment="CENTER">
+         <children>
+            <TableView fx:id="expansesTable" layoutX="1.0" layoutY="64.0" prefHeight="389.0" prefWidth="793.0">
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <Label layoutX="43.0" layoutY="34.0" prefHeight="25.0" prefWidth="63.0" text="Filter">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="expansesFrom" layoutX="119.0" layoutY="34.0" promptText="From" />
+            <DatePicker fx:id="expansesTo" layoutX="366.0" layoutY="34.0" promptText="To" />
+            <Button layoutX="609.0" layoutY="34.0" mnemonicParsing="false" onAction="#filterExpansesPeriod" text="Filter" />
+            <TitledPane animated="false" collapsible="false" layoutX="-1.0" layoutY="482.0" prefHeight="170.0" prefWidth="800.0" text="Stats">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="159.0" prefWidth="798.0">
+                     <children>
+                        <Label layoutX="230.44686889648438" layoutY="14.0" prefHeight="16.0" prefWidth="171.0" text="Today Expanses:" AnchorPane.topAnchor="10.0">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="231.44686889648438" layoutY="41.0" prefHeight="16.0" prefWidth="182.0" text="This Month Expanses:" AnchorPane.topAnchor="41.0">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="todayExpansesLabel" layoutX="418.0" layoutY="14.0" prefHeight="16.0" prefWidth="119.0" text="Label" AnchorPane.leftAnchor="428.4" AnchorPane.topAnchor="14.0">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="thisMonthExpansesLabel" layoutX="420.0" layoutY="41.0" prefHeight="16.0" prefWidth="119.0" text="Label" AnchorPane.leftAnchor="428.4" AnchorPane.topAnchor="41.0">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="231.44686889648438" layoutY="71.0" prefHeight="19.0" prefWidth="177.0" text="Last Month Expanses:" AnchorPane.topAnchor="71.0">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lastMonthExpansesLabel" layoutX="422.0" layoutY="71.0" prefHeight="16.0" prefWidth="89.0" text="Label" AnchorPane.leftAnchor="428.4" AnchorPane.topAnchor="71.0">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </TitledPane>
+            <Label layoutX="88.0" layoutY="465.0" prefHeight="26.0" prefWidth="187.0" text="Total amount:" AnchorPane.bottomAnchor="175.0" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="493.0">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Label>
+            <Label fx:id="totalExpansesInTheTableLabel" layoutX="317.0" layoutY="464.0" prefHeight="26.0" prefWidth="119.0" text="Label" AnchorPane.bottomAnchor="175.0">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Label>
+            <MenuBar fx:id="menuBar" prefHeight="29.0" prefWidth="800.0" style="-fx-background-color: wheat;">
+              <menus>
+                <Menu mnemonicParsing="false" style="fx-text-fill: white;" text="File">
+                  <items>
+                    <MenuItem mnemonicParsing="false" onAction="#addExpanse" text="Add Expanse" />
+                        <MenuItem mnemonicParsing="false" onAction="#close" text="Close" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Delete" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+            <Button layoutX="691.0" layoutY="34.0" mnemonicParsing="false" onAction="#clearFilter" text="Clear Filter" />
+         </children>
+      </AnchorPane>
+   </top>
+</BorderPane>
