--- a/src/main/resources/fxml/billing.fxml
+++ b/src/main/resources/fxml/billing.fxml
@@ -2,24 +2,26 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" styleClass="root" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="com.tanveer.controllers.BillingController">
+<GridPane alignment="center" hgap="10" styleClass="root" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tanveer.controllers.BillingController">
     <padding><Insets bottom="25" left="25" right="25" top="25" /></padding>
    <columnConstraints>
+      <ColumnConstraints />
       <ColumnConstraints />
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints />
       <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
    </rowConstraints>
    <children>
-      <TextField fx:id="itemCodeText" focusTraversable="false" promptText="Enter Item Code" GridPane.columnIndex="1" />
-      <Button mnemonicParsing="false" onAction="#generateBill" prefHeight="26.0" prefWidth="170.0" text="Generate Bill" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" onAction="#automaticBill" text="Automatic Bill" GridPane.columnIndex="2" />
+      <Button mnemonicParsing="false" onAction="#customBill" prefHeight="26.0" prefWidth="110.0" text="Custom Bill" GridPane.columnIndex="2" GridPane.rowIndex="3" />
    </children>
 
 </GridPane>
